# gif-encoder-wasm

./: .gitignore  .npmignore  Cargo.toml  LICENSE  LICENSE_MIT  README.md  package.json
example/: transparent.html
lib/: index.js  index_bg.wasm  wasm_gif_encoder_bg.js  wasm_gif_encoder_bg.wasm
scripts/: build.js  clear.js  test.js
src/: lib.rs  utils.rs
test/: test.js
