[package]
name = "gif-encoder-wasm"
version = "0.1.0"
authors = ["cenfun <cenfun@gmail.com>"]
description = "gif-encoder-wasm"
repository = "https://github.com/cenfun/gif-encoder-wasm.git"
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "^0.2.83"
gif = "^0.11.4"
# png = "^0.17.7"

js-sys = "0.3.60"
# json = "0.12.4"

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# panic = "abort"
lto = true
