[package]
name = "gif-encoder-wasm"
version = "0.1.0"
authors = ["cenfun <cenfun@gmail.com>"]
description = "gif-encoder-wasm"
repository = "https://github.com/cenfun/gif-encoder-wasm.git"
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "^0.2.83"
js-sys = "0.3.60"

gif = "^0.11.4"
# png = "^0.17.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"

# serde-wasm-bindgen = "0.4.5"

console_error_panic_hook = "0.1.7"

[profile.release]
# https://magiclen.org/rust-compile-optimize/
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
panic = "abort"